スワイプで自機が移動するように変更

--- a/TimeCosmos WatchKit App/Base.lproj/Interface.storyboard
+++ b/TimeCosmos WatchKit App/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gQi-xY-liO">
     <device id="watch38" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -14,7 +14,7 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="TimeCosmos_WatchKit_App" customModuleProvider="target">
                     <items>
-                        <spriteKitScene width="1" height="178" alignment="center" id="LbX-gW-cKz">
+                        <spriteKitScene width="136" height="178" alignment="center" id="LbX-gW-cKz">
                             <gestureRecognizers>
                                 <tapGestureRecognizer id="KV2-QE-zbe">
                                     <connections>
@@ -34,7 +34,37 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="32" y="73"/>
+            <point key="canvasLocation" x="120" y="-46"/>
+        </scene>
+        <!--Interface Controller-->
+        <scene sceneID="7NA-py-7vs">
+            <objects>
+                <controller id="aGC-kp-QCs"/>
+            </objects>
+            <point key="canvasLocation" x="120" y="228"/>
+        </scene>
+        <!--Interface Controller-->
+        <scene sceneID="RDD-1a-D9M">
+            <objects>
+                <controller id="gQi-xY-liO">
+                    <items>
+                        <label width="136" height="72" alignment="left" text="タイムコスモス" textAlignment="center" id="xFu-SV-lY5">
+                            <fontDescription key="font" type="system" pointSize="20"/>
+                        </label>
+                        <button width="1" alignment="left" title="スタート" id="Tj0-0a-wbJ">
+                            <connections>
+                                <segue destination="AgC-eL-Hgc" kind="modal" id="uSP-EN-uy8"/>
+                            </connections>
+                        </button>
+                        <button width="1" alignment="left" title="あそびかた" id="gdQ-jt-sM9">
+                            <connections>
+                                <segue destination="aGC-kp-QCs" kind="push" id="Ogw-yn-pjk"/>
+                            </connections>
+                        </button>
+                    </items>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="-187" y="73"/>
         </scene>
     </scenes>
 </document>
